--- a/css/styles.css
+++ b/css/styles.css
@@ -1,98 +1,6 @@
 /* GLOBALS */
 body {
   font-family: "Montserrat", sans-serif;
-  background-color: black;
-  color: #F1DAC4;
+  color: white;
+  background-color: rgb(88, 79, 79);
 }
-
-.btn-primary {
-  background-color: #f2f5ea;
-  border-color: black;
-}
-/* GLOBALS END */
-
-/* HOME */
-.container {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 20px;
-  background-color: #F5B30C; /* set the background color of the container */
-  border-radius: 20px; /* set the border radius to make the container rounded */
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* add a box shadow to make the container stand out */
-  max-width: 98%; /* set the maximum width of the container */
-  overflow: hidden; /* hide any content that overflows the container */
-  height: 87vh; /* set the height to 100vh to cover the entire viewport */
-}
-
-.card-header {
-  padding: 10px;
-}
-
-.card-body {
-  padding: 20px;
-}
-
-.card a {
-  color: black;
-  text-decoration: none;
-}
-
-.card a:hover {
-  color: #F1DAC4;
-  border-color: #F1DAC4;
-  background-color: black;
-  text-decoration: underline;
-}
-
-.card {
-  background-color: black;
-  color: #212529;
-  border-radius: 38px;
-  border: none;
-  box-shadow: 2px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 1s ease-in-out, box-shadow 1s ease-in-out; /* add transition property for box-shadow */
-}
-
-.card:hover {
-  transform: scale(1.03);
-  box-shadow: 8px 16px rgba(0, 0, 0, 0.1);
-}
-
-
-.custom-card {
-  background-color: black;
-  padding: 20px;
-}
-
-.col-md-6 {
-  margin-top: 20px; /* add some margin to create spacing */
-}
-/* HOME END */
-
-/* NAVBAR */
-.navbar {
-  padding-top: 20px;
-  background-color: black;
-}
-
-.navbar .navbar-nav .nav-link {
-  color: #f2f7f2;
-}
-
-.navbar .navbar-nav .nav-link:hover {
-  color: black;
-  background-color: #f2f7f2;
-}
-
-.navbar .navbar-nav .dropdown-menu {
-  background-color: black;
-}
-
-.navbar .navbar-nav .dropdown-menu .dropdown-item {
-  color: #f2f7f2;
-}
-
-.navbar .navbar-nav .dropdown-menu .dropdown-item:hover {
-  color: black;
-}
-/* NAVBAR END */
