--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,38 +1,38 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar bg-dark navbar-expand-lg">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        <li class="nav-item ">
+          <a class="nav-link text-white active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/festival">Festival</a>
+          <a class="nav-link text-white" href="/festival">Festival</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/documentary">Documentary</a>
+          <a class="nav-link text-white" href="/documentary">Documentary</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link text-white dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             History
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">The Birth</a></li>
-            <li><a class="dropdown-item" href="#">The Legends</a></li>
-            <li><a class="dropdown-item" href="#">The Dancehalls</a></li>
-            <li><a class="dropdown-item" href="#">The Doughboys</a></li>
+            <li><a class="dropdown-item" href="/birth">The Birth</a></li>
+            <li><a class="dropdown-item" href="/legends">The Legends</a></li>
+            <li><a class="dropdown-item" href="/dancehalls">The Dancehalls</a></li>
+            <li><a class="dropdown-item" href="/doughboys">The Doughboys</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/sponsors">Sponsors</a>
+          <a class="nav-link text-white" href="/sponsors">Sponsors</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/board">Board</a>
+          <a class="nav-link text-white" href="/board">Board</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/board">Contact</a>
+          <a class="nav-link text-white" href="/board">Contact</a>
         </li>
       </ul>
     </div>
