--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -10,7 +10,7 @@ import Footer from "../components/footer.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
-    <title>CBWS Home</title>
+    <title>CBWS | Sponsors</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,46 +29,9 @@ import Footer from "../components/footer.astro";
     <Header />
 
     <div
-      class="container bg-dark d-flex flex-wrap justify-content-center align-items-center"
+      class="container bg-dark d-flex flex-wrap "
     >
-      <div class="row flex-column flex-md-row">
-        <div class="col-md-6 mb-3 mb-md-0">
-          <div
-            class="rounded p-3 d-flex flex-column justify-content-center align-items-center"
-          >
-            <div class="card">
-              <h3 class="card-header"><b>The Festival</b></h3>
-              <img src="/images/FilmSiteHeaderGraphic.png" />
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">
-                  With supporting text below as a natural lead-in to additional
-                  content.
-                </p>
-                <a href="/festival" class="btn btn-primary">Learn More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 mb-3 mb-md-0">
-          <div
-            class="rounded p-3 d-flex flex-column justify-content-center align-items-center"
-          >
-            <div class="card">
-              <h3 class="card-header"><b>The Documentary</b></h3>
-              <img src="/images/FilmSiteHeaderGraphic.png" />
-              <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">
-                  With supporting text below as a natural lead-in to additional
-                  content.
-                </p>
-                <a href="/documentary" class="btn btn-primary">Learn More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <p>sponsors</p>
     </div>
 
     <Footer />
