--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* GLOBALS */
 body {
   font-family: "Montserrat", sans-serif;
   color: white;
@@ -27,9 +26,8 @@ hr {
 }
 
 .navbar-toggler {
-  background-color: white; /* Change this to the desired color */
+  background-color: white; 
 }
-/* END GLOBALS */
 
 /* LEGENDS */
 .legends-grid {
