--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Footer from "../components/footer.astro";
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link href="/css/styles.css" rel="stylesheet"/>
   </head>
   <body>
     <Header />
@@ -38,7 +38,7 @@ import Footer from "../components/footer.astro";
           >
             <div class="card">
               <h3 class="card-header"><b>The Festival</b></h3>
-              <img src="/images/FilmSiteHeaderGraphic.png" />
+              <img src="/images/FilmSiteHeaderGraphic.png" alt="Festival Header"/>
               <div class="card-body">
                 <h5 class="card-title">Special title treatment</h5>
                 <p class="card-text">
@@ -56,7 +56,7 @@ import Footer from "../components/footer.astro";
           >
             <div class="card">
               <h3 class="card-header"><b>The Documentary</b></h3>
-              <img src="/images/FilmSiteHeaderGraphic.png" />
+              <img src="/images/FilmSiteHeaderGraphic.png" alt="Documentary Header"/>
               <div class="card-body">
                 <h5 class="card-title">Special title treatment</h5>
                 <p class="card-text">
