--- a/src/pages/legends.astro
+++ b/src/pages/legends.astro
@@ -33,37 +33,37 @@ import Footer from "../components/footer.astro";
       <hr />
       <div class="container bg-dark">
         <div class="row">
-          <div class="col-md-3 col-sm-6 legends-grid">
+          <div class="col-md-3 col-sm-6 gallery-grid">
             <img
               src="/images/legends/BobWills_Legends.png"
               alt="Bob Wills"
-              class="img-fluid legends-img"
+              class="img-fluid gallery-img"
             />
-            <p class="legends-text">Bob Wills</p>
+            <p class="gallery-title">Bob Wills</p>
           </div>
-          <div class="col-md-3 col-sm-6 legends-grid">
+          <div class="col-md-3 col-sm-6 gallery-grid">
             <img
               src="/images/legends/MiltonBrown_Legends.png"
               alt="Milton Brown"
-              class="img-fluid legends-img"
+              class="img-fluid gallery-img"
             />
-            <p class="legends-text">Milton Brown</p>
+            <p class="gallery-title">Milton Brown</p>
           </div>
-          <div class="col-md-3 col-sm-6 legends-grid">
+          <div class="col-md-3 col-sm-6 gallery-grid">
             <img
               src="/images/legends/TommyDuncan_Legends.png"
               alt="Tommy Duncan"
-              class="img-fluid legends-img"
+              class="img-fluid gallery-img"
             />
-            <p class="legends-text">Tommy Duncan</p>
+            <p class="gallery-title">Tommy Duncan</p>
           </div>
-          <div class="col-md-3 col-sm-6 legends-grid">
+          <div class="col-md-3 col-sm-6 gallery-grid">
             <img
               src="/images/legends/BobDunn_Legends.png"
               alt="Tommy Duncan"
-              class="img-fluid legends-img"
+              class="img-fluid gallery-img"
             />
-            <p class="legends-text">Bob Dunn</p>
+            <p class="gallery-title">Bob Dunn</p>
           </div>
           <!-- Add more columns as needed -->
         </div>
