modal kinda works

--- a/src/pages/board.astro
+++ b/src/pages/board.astro
@@ -61,8 +61,8 @@ import Modals from "../components/boardModals.astro";
               src="/images/board/MikeMarkwardt_Board.png"
               alt="Mike Markwardt"
               class="img-fluid gallery-img"
-              data-toggle="modal"
-              data-target="#myModal"
+              data-bs-toggle="modal"
+              data-bs-target="#myModal"
             />
             <p class="gallery-title">Mike Markwardt</p>
           </div>
@@ -108,21 +108,33 @@ import Modals from "../components/boardModals.astro";
       crossorigin="anonymous"
     ></script>
 
-    <div class="modal fade" id="myModal">
+    <div
+      class="modal bg-dark"
+      id="myModal"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      aria-hidden="true"
+    >
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Modal Title</h5>
-            <button type="button" class="close" data-dismiss="modal"
-              >&times;</button
-            >
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">
+              Modal title
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"></button>
           </div>
-          <div class="modal-body">
-            <p>This is the modal content.</p>
-          </div>
+          <div class="modal-body">...</div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal"
-              >Close</button
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal">Close</button
             >
           </div>
         </div>
