modals and markdown

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,8 +1,7 @@
 ---
 import Header from "../components/header.astro";
 import Footer from "../components/footer.astro";
-import BoardGallery from "../components/board_gallery.astro";
-import BoardModals from "../components/board_modals.astro";
+const { frontmatter } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -12,7 +11,7 @@ import BoardModals from "../components/board_modals.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
-    <title>CBWS | The Board</title>
+    <title>CBWS | {frontmatter.title}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,34 +28,10 @@ import BoardModals from "../components/board_modals.astro";
   </head>
   <body>
     <Header />
+
     <div class="container bg-dark d-flex flex-wrap">
-      <h3>The Board</h3>
-      <hr />
-      <p>
-        <i>
-          We the Founders and Board of Advisors of the Cowtown Birthplace of
-          Western Swing are dedicated to the promotion, preservation and
-          heritage of this great genre that was pioneered and developed by the
-          Legends "King" Bob Wills and "Father" Milton Brown during their
-          formative years of 1929 to 1936 in Fort Worth "Cowtown" Texas. This
-          early development of what would become Western Swing is defined as a
-          musical melting pot that represents a diverse group of talented
-          musicians who contributed to the creation, growth and prosperity of
-          our beloved dance music and distinctive Western way of life that has
-          flourished here in Cowtown for well over a century, and is indeed a
-          fitting legacy for our rich cultural heritage that is shared by
-          everyone who loves Western Swing. We aim to grow the awareness and
-          love of this great music to a younger generation who can embrace the
-          genre and insure that it lives on for many decades to come. Lastly,
-          our end goal is to eventually build a Birthplace of Western Swing
-          Museum here in Fort Worth that showcases the many past Legends of
-          Western Swing.
-        </i>
-      </p>
-      <hr />
-      <BoardGallery />
+      <slot />
     </div>
-    <BoardModals />
     <Footer />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script
