--- a/src/pages/legends.astro
+++ b/src/pages/legends.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/header.astro";
 import Footer from "../components/footer.astro";
+import LegendsGallery from "../components/legends_gallery.astro";
 ---
 
 <!DOCTYPE html>
@@ -31,45 +32,8 @@ import Footer from "../components/footer.astro";
     <div class="container bg-dark d-flex flex-wrap">
       <h3>The Legends</h3>
       <hr />
-      <div class="container bg-dark">
-        <div class="row">
-          <div class="col-md-3 col-sm-6 gallery-grid">
-            <img
-              src="/images/legends/BobWills_Legends.png"
-              alt="Bob Wills"
-              class="img-fluid gallery-img"
-            />
-            <p class="gallery-title">Bob Wills</p>
-          </div>
-          <div class="col-md-3 col-sm-6 gallery-grid">
-            <img
-              src="/images/legends/MiltonBrown_Legends.png"
-              alt="Milton Brown"
-              class="img-fluid gallery-img"
-            />
-            <p class="gallery-title">Milton Brown</p>
-          </div>
-          <div class="col-md-3 col-sm-6 gallery-grid">
-            <img
-              src="/images/legends/TommyDuncan_Legends.png"
-              alt="Tommy Duncan"
-              class="img-fluid gallery-img"
-            />
-            <p class="gallery-title">Tommy Duncan</p>
-          </div>
-          <div class="col-md-3 col-sm-6 gallery-grid">
-            <img
-              src="/images/legends/BobDunn_Legends.png"
-              alt="Tommy Duncan"
-              class="img-fluid gallery-img"
-            />
-            <p class="gallery-title">Bob Dunn</p>
-          </div>
-          <!-- Add more columns as needed -->
-        </div>
-      </div>
+      <LegendsGallery />
     </div>
-
     <Footer />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script
