--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -29,7 +29,7 @@ const { frontmatter } = Astro.props;
   <body>
     <Header />
 
-    <div class="container bg-dark d-flex flex-wrap">
+    <div class="container bg-black d-flex flex-wrap">
       <slot />
     </div>
     <Footer />
