adding aws bucket

--- a/src/components/board_gallery.astro
+++ b/src/components/board_gallery.astro
@@ -2,7 +2,7 @@
 import board from "../../data/board.js";
 ---
 
-<div class="container bg-dark">
+<div class="container bg-black">
     <div class="row">
       {
         board.map((item) => (
