--- a/src/components/legends_gallery.astro
+++ b/src/components/legends_gallery.astro
@@ -2,7 +2,7 @@
 import legends from "../../data/legends.js";
 ---
 
-<div class="container bg-dark">
+<div class="container bg-black">
   <div class="row">
     {
       legends.map((item) => (
