--- a/src/pages/birth.astro
+++ b/src/pages/birth.astro
@@ -28,7 +28,7 @@ import Footer from "../components/footer.astro";
   <body>
     <Header />
 
-    <div class="container bg-dark d-flex flex-wrap">
+    <div class="container bg-black d-flex flex-wrap">
       <h3>Welcome to Cowtown, The Birthplace of Western Swing</h3>
       <hr/>
       <p>
