--- a/src/pages/documentary.astro
+++ b/src/pages/documentary.astro
@@ -29,7 +29,7 @@ import Footer from "../components/footer.astro";
     <Header />
 
     <div
-      class="container bg-dark d-flex flex-wrap "
+      class="container bg-black d-flex flex-wrap "
     >
     <p>documentary</p>
     </div>
