--- a/src/pages/legends.astro
+++ b/src/pages/legends.astro
@@ -29,7 +29,7 @@ import LegendsGallery from "../components/legends_gallery.astro";
   <body>
     <Header />
 
-    <div class="container bg-dark d-flex flex-wrap">
+    <div class="container bg-black d-flex flex-wrap">
       <h3>The Legends</h3>
       <hr />
       <LegendsGallery />
