--- a/src/pages/board.astro
+++ b/src/pages/board.astro
@@ -29,7 +29,7 @@ import BoardModals from "../components/board_modals.astro";
   </head>
   <body>
     <Header />
-    <div class="container bg-dark d-flex flex-wrap">
+    <div class="container bg-black d-flex flex-wrap">
       <h3>The Board</h3>
       <hr />
       <p>
