--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,25 @@ hr {
 .gallery-title {
   text-align: center;
 }
+
+.btn-primary {
+  background-color: black;
+  color: white;
+  border-color: white;
+}
+
+.btn-primary:hover {
+  background-color: white;
+  color: black;
+  border-color: black;
+}
+
+.bi:hover {
+  cursor: pointer;
+}
+
+@media (min-width: 768px) {
+  .modal-dialog.wider {
+    max-width: 1200px; 
+  }
+}
