--- a/src/pages/board.astro
+++ b/src/pages/board.astro
@@ -26,6 +26,7 @@ import BoardModals from "../components/board_modals.astro";
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
   <body>
     <Header />
