--- a/src/components/board_modals.astro
+++ b/src/components/board_modals.astro
@@ -1,11 +1,12 @@
 ---
 import board from "../../data/board.js";
+import icons from "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css";
 ---
 
 {
   board.map((item) => (
     <div
-      class="modal"
+      class="modal align-items-center"
       id={item.modal_target.substring(1)}
       data-bs-backdrop="static"
       data-bs-keyboard="false"
@@ -13,8 +14,8 @@ import board from "../../data/board.js";
       aria-labelledby={item.modal_target.substring(1) + "Label"}
       aria-hidden="true"
     >
-      <div class="modal-dialog">
-        <div class="modal-content text-black">
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+        <div class="modal-content bg-dark text-white">
           <div class="modal-header">
             <h1
               class="modal-title fs-5"
@@ -34,6 +35,8 @@ import board from "../../data/board.js";
             <Fragment set:html={`${item.bio}`} />
           </div>
           <div class="modal-footer">
+            <i class="bi bi-arrow-left"></i>
+            <i class="bi bi-arrow-right"></i>
             <button
               type="button"
               class="btn btn-primary"
