--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -24,7 +24,7 @@ const { frontmatter } = Astro.props;
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../../css/styles.css" />
   </head>
   <body>
     <Header />
