trying css again

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/header.astro";
 import Footer from "../components/footer.astro";
+import '../../css/styles.css';
 const { frontmatter } = Astro.props;
 ---
 
@@ -24,7 +25,6 @@ const { frontmatter } = Astro.props;
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../css/styles.css" />
   </head>
   <body>
     <Header />
