--- a/src/pages/dancehalls.astro
+++ b/src/pages/dancehalls.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/header.astro";
 import Footer from "../components/footer.astro";
+import '../../css/styles.css';
 ---
 
 <!DOCTYPE html>
@@ -23,7 +24,6 @@ import Footer from "../components/footer.astro";
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../css/styles.css" />
   </head>
   <body>
     <Header />
