--- a/src/pages/legends.astro
+++ b/src/pages/legends.astro
@@ -2,6 +2,7 @@
 import Header from "../components/header.astro";
 import Footer from "../components/footer.astro";
 import LegendsGallery from "../components/legends_gallery.astro";
+import '../../css/styles.css';
 ---
 
 <!DOCTYPE html>
@@ -24,7 +25,6 @@ import LegendsGallery from "../components/legends_gallery.astro";
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../css/styles.css" />
   </head>
   <body>
     <Header />
