--- a/src/pages/festival.astro
+++ b/src/pages/festival.astro
@@ -2,6 +2,8 @@
 import Header from "../components/header.astro";
 import Footer from "../components/footer.astro";
 import '../../css/styles.css';
+import FestivalCarousel from "../components/festival_carousel.astro";
+import FestivalTickets from "../components/festival_tickets.astro";
 ---
 
 <!DOCTYPE html>
@@ -27,11 +29,13 @@ import '../../css/styles.css';
   </head>
   <body>
     <Header />
-
     <div
       class="container bg-black d-flex flex-wrap "
     >
-    <p>festival</p>
+    <h1>Cowtown Birthplace of Western Swing Festival</h1>
+    <hr />
+    <FestivalCarousel />
+    <FestivalTickets />
     </div>
 
     <Footer />
