--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,4 +1,4 @@
-<nav class="navbar bg-black sticky-top navbar-expand-lg">
+<nav class="navbar bg-dark sticky-top navbar-expand-lg">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
           <a class="nav-link text-white dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             History
           </a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu bg-dark">
             <li><a class="dropdown-item" href="/birth">The Birth</a></li>
             <li><a class="dropdown-item" href="/legends">The Legends</a></li>
             <li><a class="dropdown-item" href="/dancehalls">The Dancehalls</a></li>
