--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -1,7 +1,7 @@
 ---
 import Header from "../components/header.astro";
 import Footer from "../components/footer.astro";
-import '../../css/styles.css';
+import "../../css/styles.css";
 ---
 
 <!DOCTYPE html>
@@ -28,10 +28,10 @@ import '../../css/styles.css';
   <body>
     <Header />
 
-    <div
-      class="container bg-black d-flex flex-wrap "
-    >
-    <p>sponsors</p>
+    <div class="container-fluid bg-black d-flex flex-wrap">
+      <div class="container-lg bg-black d-flex flex-wrap">
+        <h1>Sponsors</h1>
+      </div>
     </div>
 
     <Footer />
