--- a/src/components/festival_tickets.astro
+++ b/src/components/festival_tickets.astro
@@ -9,7 +9,7 @@ import tickets from "../../data/tickets.js";
       tickets.map((item) => (
         <div class="row">
           <div class="tickets-card-container">
-            <div class="card bg-dark text-white mb-3 tickets-card">
+            <div class="card bg-light mb-3 tickets-card">
               <div class="card-body d-flex flex-column flex-md-row justify-content-between">
                 <div>
                   <h5 class="card-title">{item.name}</h5>
