--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -28,10 +28,10 @@ import '../../css/styles.css';
   <body>
     <Header />
 
-    <div
-      class="container bg-dark d-flex flex-wrap "
-    >
-    <p>contact</p>
+    <div class="container-fluid bg-black d-flex flex-wrap">
+      <div class="container-lg bg-black d-flex flex-wrap">
+        <h1>Contact Us</h1>
+      </div>
     </div>
 
     <Footer />
