--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import '../../css/styles.css';
     <Header />
 
     <div
-      class="container bg-dark d-flex flex-wrap justify-content-center align-items-center"
+      class="container-lg bg-black d-flex flex-wrap justify-content-center align-items-center"
     >
       <div class="row flex-column flex-md-row">
         <div class="col-md-6 mb-3 mb-md-0">
